tests/sksl/errors/Ossfuzz40427.glsl
### Compilation failed:

error: 1: integer is out of range for type 'uint': -1
error: 1: expected 'uint', but found 'uint2'
2 errors
